@@ -11,6 +11,7 @@
 
 <div id="tx-solr-search">
 	<!-- ###SOLR_SEARCH_FORM### begin -->
+	###FORM.SUGGEST_URL###
 	<form id="tx-solr-search-form-pi-results" action="###FORM.ACTION###" method="get" accept-charset="###FORM.ACCEPT-CHARSET###">
 		###LLL:searchWord### <input type="text" class="tx-solr-q" name="###SOLR.PREFIX###[q]" value="###FORM.Q###" />
 		<input type="hidden" name="id" value="###FORM.ACTION_ID###" />
